--- a/templates/sign_builder.html
+++ b/templates/sign_builder.html
@@ -103,6 +103,7 @@
 
   <div class="card form-card">
     <form method="post" action="{{ url_for('inventory.build_sign') }}" id="builderForm">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
       <div class="form-grid two-column">
         <div class="form-field">
           <label for="label">Assembled Unit Label *</label>
