--- a/templates/app_admin/app_admin_form.html
+++ b/templates/app_admin/app_admin_form.html
@@ -13,6 +13,7 @@
 <div class="form-shell">
   <div class="card form-card">
     <form method="POST">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
       <div class="form-field">
         <label for="name">Name *</label>
         <input type="text" id="name" name="name" value="{{ name or '' }}" required>
