--- a/templates/users.html
+++ b/templates/users.html
@@ -42,6 +42,7 @@
                 <a class="btn small" href="{{ url_for('auth.edit_user', user_id=user.id) }}">Edit</a>
                 {% if user.id != current_user.id %}
                   <form method="post" action="{{ url_for('auth.delete_user', user_id=user.id) }}" onsubmit="return confirm('Remove user {{ user.name }}? This cannot be undone.');">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                     <button class="btn small danger" type="submit">Delete</button>
                   </form>
                 {% endif %}
